--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,10 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+        <meta name="mobile-web-app-capable" content="yes">
         <title>Hello</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="out.css">
     </head>
     <body>
 	    <script src="out.js"></script>
